clusters/k4/kubernetes/apps/dev/woodpecker/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ${APP}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
    - fromEntities:
        - kube-apiserver
  egress:
    - # Envoy
      toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
    - toEntities:
        - kube-apiserver
